# echo_chamber_

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
.kiro/specs/echo-chamber-detector/: .config.kiro  design.md  requirements.md  tasks.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
api/: __init__.py  app.py  auth.py  cache.py  dtos.py  rate_limit.py  router.py
community/: __init__.py  service.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: DatasetSelector.tsx  DiversityHistogram.tsx  MetricsPanel.tsx  PolarizationChart.tsx  SigmaGraph.tsx
dashboard/src/hooks/: useSnapshotPoller.ts
graph/: __init__.py  db_models.py  models.py  redis_keys.py  service.py
ingestion/: __init__.py  adapters.py  service.py  validation.py
metrics/: __init__.py  service.py
recommendations/: __init__.py  bridge_nodes.py  service.py  topic_vectors.py
tests/: __init__.py  test_adapters.py  test_api_pagination_cache_rate_limit.py  test_community_service.py  test_db_models.py  test_graph_service.py  test_ingestion_service.py  test_metrics_persistence.py  test_metrics_service.py  test_models.py  test_pipeline_congress.py  test_pipeline_reddit_body.py  test_pipeline_reddit_title.py  test_pipeline_wiki_rfa.py  test_recommendations.py  test_topic_vectors.py  test_validation.py
